--- a/client/src/app/components/login/login.component.scss
+++ b/client/src/app/components/login/login.component.scss
@@ -11,11 +11,9 @@ main {
 	// border: 2px solid $dark-purple;
 	display: grid;
 	grid-template-rows: 100px max-content;
-	margin-inline-start: auto;
-	margin-inline-end: auto;
+	margin-inline: auto;
 	max-width: 600px;
-	width: 100%;
-	height: 100%;
+	height: 100vh;
 
 	& h4 {
 		font-weight: normal;
